trying to fix alignment issue with js this time

--- a/views/assets/style.css
+++ b/views/assets/style.css
@@ -3,6 +3,7 @@ body {
 	font-family: 'Inconsolata', monospace;
 	background: white;
 	color: rgb(0, 0, 255);
+
 }
 
 
@@ -61,9 +62,7 @@ h1 {
 	width: 800px;
 }
 
-.page_home {
-	text-align: center;
-}
+
 
 
 
@@ -73,6 +72,8 @@ h1 {
 	width: 100%;
 	/*height: 100%;*/
 }
+
+
 
 /*#page_home .text_container {
 	margin: auto;
